modified:   15. Text Files/StreamReader and StreamWriter.ipynb

--- a/15. Text Files/StreamReader and StreamWriter.ipynb
+++ b/15. Text Files/StreamReader and StreamWriter.ipynb
@@ -658,11 +658,7 @@
     }
    },
    "source": [
-    "The **Unicode Standard** assigns a **code point** (a number) to each character in every supported script. A **Unicode Transformation Format** (**UTF**) is a way to encode that code point. The Unicode Standard uses the following :\n",
-    "\n",
-    "- **UTF-8**, which represents each code point as a sequence of **one to four bytes**\n",
-    "- **UTF-16**, which represents each code point as a sequence of **one to two 16-bit integers**\n",
-    "- **UTF-32**, which represents each code point as a **32-bit integer**."
+    "The **Unicode Standard** assigns a **code point** (a number) to each character in every supported script. A **Unicode Transformation Format** (**UTF**) is a way to encode that code point."
    ]
   },
   {
@@ -678,6 +674,21 @@
    },
    "source": [
     "All character encoding classes in .NET inherit from the `System.Text.Encoding` class, which is an abstract class that defines the functionality common to all character encodings, as illustrated below:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- **UTF-8**, which represents each code point as a sequence of **one to four bytes**"
    ]
   },
   {
@@ -745,6 +756,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- **UTF-16**, which represents each code point as a sequence of **one to two 16-bit integers**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -806,6 +847,36 @@
    ],
    "source": [
     "Encoding.GetEncoding(\"UTF-16\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- **UTF-32**, which represents each code point as a **32-bit integer**."
    ]
   },
   {
