modified:   15. Text Files/ExampleText/Fish.txt new file:   15. Text Files/ExampleText/OneThruTwenty.txt modified:   15. Text Files/StreamReader and StreamWriter.ipynb

--- a/15. Text Files/StreamReader and StreamWriter.ipynb
+++ b/15. Text Files/StreamReader and StreamWriter.ipynb
@@ -106,7 +106,7 @@
     }
    },
    "source": [
-    "#### `StreamReader` Class for Reading a Text File"
+    "### `StreamReader` Class for Reading a Text File"
    ]
   },
   {
@@ -371,10 +371,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line 0: One Fish\n",
-      "Line 1: Two Fish\n",
-      "Line 2: Red Fish\n",
-      "Line 3: Blue Fish\n"
+      "Line 1: One Fish\n",
+      "Line 2: Two Fish\n",
+      "Line 3: Red Fish\n",
+      "Line 4: Blue Fish\n"
      ]
     }
    ],
@@ -387,7 +387,7 @@
     "\n",
     "// We then initialize a variable which will account for \n",
     "// each concurrent line number \n",
-    "int lineNumber = 0;\n",
+    "int lineNumber = 1;\n",
     "\n",
     "\n",
     "// We may now read in the first line of the input\n",
@@ -525,62 +525,86 @@
      "languageId": "polyglot-notebook"
     }
    },
+   "outputs": [],
+   "source": [
+    "public void ReadThenClose( string filePath )\n",
+    "{\n",
+    "\n",
+    "    // First, we open a stream to the input file \n",
+    "    // by creating in instance of the StreadReader class \n",
+    "    // which reads from our desired input source\n",
+    "    StreamReader reader = new StreamReader( filePath );\n",
+    "\n",
+    "\n",
+    "    // Invoke the using construct to ensure \n",
+    "    // that the file stream will be closed after processing the data\n",
+    "    using ( reader )\n",
+    "    {\n",
+    "\n",
+    "        // We then initialize a variable which will account for \n",
+    "        // each concurrent line number \n",
+    "        int lineNumber = 1;\n",
+    "\n",
+    "\n",
+    "        // We may now read in the first line of the input\n",
+    "        string currentLine = reader.ReadLine();\n",
+    "\n",
+    "\n",
+    "        // From here, \n",
+    "        // Iterating While the current line still has valid data to be read:\n",
+    "        while( currentLine != null )\n",
+    "        {\n",
+    "\n",
+    "            // Print the current line number, along with the line itself,\n",
+    "            // taking care to simultaneously increment the line number afterwards\n",
+    "            Console.WriteLine( $\"Line {lineNumber++}: {currentLine}\" );\n",
+    "\n",
+    "\n",
+    "            // Clobber the old line with the next concurrent line\n",
+    "            currentLine = reader.ReadLine();\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // After all that,\n",
+    "        // The file has been successfully read\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "    // Here, we can be sure that\n",
+    "    // The file stream has been closed automatically\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Line 0: One Fish\n",
-      "Line 1: Two Fish\n",
-      "Line 2: Red Fish\n",
-      "Line 3: Blue Fish\n"
+      "Line 1: One Fish\n",
+      "Line 2: Two Fish\n",
+      "Line 3: Red Fish\n",
+      "Line 4: Blue Fish\n"
      ]
     }
    ],
    "source": [
-    "// First, we open a stream to the input file \n",
-    "// by creating in instance of the StreadReader class \n",
-    "// which reads from our desired input source\n",
-    "StreamReader reader = new StreamReader( @\"ExampleText\\Fish.txt\" );\n",
-    "\n",
-    "\n",
-    "// Invoke the using construct to ensure \n",
-    "// that the file stream will be closed after processing the data\n",
-    "using ( reader )\n",
-    "{\n",
-    "\n",
-    "    // We then initialize a variable which will account for \n",
-    "    // each concurrent line number \n",
-    "    int lineNumber = 0;\n",
-    "\n",
-    "\n",
-    "    // We may now read in the first line of the input\n",
-    "    string currentLine = reader.ReadLine();\n",
-    "\n",
-    "\n",
-    "    // From here, \n",
-    "    // Iterating While the current line still has valid data to be read:\n",
-    "    while( currentLine != null )\n",
-    "    {\n",
-    "\n",
-    "        // Print the current line number, along with the line itself,\n",
-    "        // taking care to simultaneously increment the line number afterwards\n",
-    "        Console.WriteLine( $\"Line {lineNumber++}: {currentLine}\" );\n",
-    "\n",
-    "\n",
-    "        // Clobber the old line with the next concurrent line\n",
-    "        currentLine = reader.ReadLine();\n",
-    "\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "    // After all that,\n",
-    "    // The file has been successfully read\n",
-    "\n",
-    "}\n",
-    "\n",
-    "// Here, we can be sure that\n",
-    "// The file stream has been closed automatically"
+    "ReadThenClose( @\"ExampleText\\Fish.txt\" )"
    ]
   },
   {
@@ -721,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -815,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -909,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -998,7 +1022,7 @@
     }
    },
    "source": [
-    "Using this convention, we may specify the character encoding of any given **Stream Object** as generalized below: "
+    "Using this convention, we may optionally specify the character encoding of any given **Stream Object** as generalized below: "
    ]
   },
   {
@@ -1014,11 +1038,510 @@
    },
    "source": [
     "```c#\n",
-    "StreamReader reader = new StreamReader(\n",
-    "    @\"PathTo/SomeFile.txt\",\n",
-    "    Encoding.GetEncoding(\"SomeEncoding\")\n",
+    "StreamReader readerName = new StreamReader(\n",
+    "    @\"PathTo\\SomeFile.txt\",\n",
+    "    [Encoding.GetEncoding(\"SomeEncoding\")]\n",
     ");\n",
     "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### `StreamWriter` Class for Writing to a Text File"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The `StreamWriter` class is part of the `System.IO` namespace and is used exclusively for working with text data.   \n",
+    "   \n",
+    "It resembles the `StreamReader` class, but instead of methods for reading, it offers similar methods for **writing to a text file**. Unlike other streams, *before* writing data to the desired destination, `StreamWriter` turns it into bytes. `StreamWriter` also enables us to set a preferred **character encoding** at the time it is created, but also features an additional optional **boolean** parameter which indicates whether to **Overwrite** or **Append to a file** if it is found to already exist. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can create an instance of the class as generalized below:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "StreamWriter writerName = new StreamWriter(\n",
+    "    @\"PathTo\\SomeFile.txt\",\n",
+    "    [ [Encoding:] Encoding.GetEncoding(\"SomeEncoding\") ],\n",
+    "    [ [Append:] TrueOrFalse ]   \n",
+    ");\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Writing to a New Text File Line by Line and Manually Closing the File"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's suppose we wanted to write a file named `OneThruTwenty.txt` which **counts every number from 1 to 20** on a new line. We may implement that as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// First, we open a stream to the output file \n",
+    "// by creating in instance of the StreamWriter class \n",
+    "// which will target the specified file, should it be found to exist,\n",
+    "// or create it, should it not be found to exist \n",
+    "StreamWriter writer = new StreamWriter( \n",
+    "    @\"ExampleText\\OneThruTwenty.txt\"\n",
+    ");\n",
+    "\n",
+    "\n",
+    "// From here, \n",
+    "// Iterating For every concurrent integer from 1 to 20:\n",
+    "for( int concurrentInteger = 1; concurrentInteger <= 20; concurrentInteger++ )\n",
+    "{\n",
+    "\n",
+    "    // Write the concurrent integer to a new line in the text file\n",
+    "    writer.WriteLine( concurrentInteger );\n",
+    "\n",
+    "}\n",
+    "\n",
+    "\n",
+    "// After all that,\n",
+    "// The file has been successfully read.\n",
+    "// Close the file stream to avoid resource conflicts\n",
+    "writer.Close();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "After the writing operations are concluded, we may deploy our `ReadThenClose()` method which utilizes `StreamReader` to verify that `OneThruTwenty.txt` was successfully written to:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1: 1\n",
+      "Line 2: 2\n",
+      "Line 3: 3\n",
+      "Line 4: 4\n",
+      "Line 5: 5\n",
+      "Line 6: 6\n",
+      "Line 7: 7\n",
+      "Line 8: 8\n",
+      "Line 9: 9\n",
+      "Line 10: 10\n",
+      "Line 11: 11\n",
+      "Line 12: 12\n",
+      "Line 13: 13\n",
+      "Line 14: 14\n",
+      "Line 15: 15\n",
+      "Line 16: 16\n",
+      "Line 17: 17\n",
+      "Line 18: 18\n",
+      "Line 19: 19\n",
+      "Line 20: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "ReadThenClose( @\"ExampleText\\OneThruTwenty.txt\" );"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Appending Lines to an Existing Text File and Automatically Closing the File"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now, suppose that, rather than creating a new file, we wanted to **add a new line to an existing text file**, without overwiting the other lines of text present."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "For example, say we wanted to add the following lines to the `Fish.txt` file:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public string[] linesToAppend = \n",
+    "{\n",
+    "    \"False Fish\",\n",
+    "    \"True Fish\",\n",
+    "    \"Me Fish\",\n",
+    "    \"You Fish\"\n",
+    "}; "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may implement our desired objective, while simultaneously ensuring to close the file automatically as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// This time, we will also specify the optional 'append' parameter\n",
+    "// to indicate that we choose not to overwrite the exisitng data \n",
+    "StreamWriter writer = new StreamWriter( \n",
+    "    @\"ExampleText\\Fish.txt\",\n",
+    "    append: true\n",
+    ");\n",
+    "\n",
+    "\n",
+    "// Invoke the using construct to ensure \n",
+    "// that the file stream will be closed after processing the data\n",
+    "using( writer )\n",
+    "{\n",
+    "\n",
+    "    // From here, \n",
+    "    // Iterating For Each current line in the array of lines to append:\n",
+    "    foreach( string concurrentLine in linesToAppend )\n",
+    "    {\n",
+    "\n",
+    "        // Write the concurrent line to a new line in the text file\n",
+    "        writer.WriteLine( concurrentLine );\n",
+    "\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "\n",
+    "// Here, we can be sure that\n",
+    "// The file stream has been closed automatically"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "After the writing operations are concluded, we may deploy our `ReadThenClose()` method which utilizes `StreamReader` to verify that `Fish.txt` was successfully appended:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line 1: One Fish\n",
+      "Line 2: Two Fish\n",
+      "Line 3: Red Fish\n",
+      "Line 4: Blue Fish\n",
+      "Line 5: False Fish\n",
+      "Line 6: True Fish\n",
+      "Line 7: Me Fish\n",
+      "Line 8: You Fish\n"
+     ]
+    }
+   ],
+   "source": [
+    "ReadThenClose( @\"ExampleText\\Fish.txt\" );"
    ]
   }
  ],
@@ -1035,18 +1558,6 @@
      {
       "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [],
-      "languageName": null,
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
