modified:   15. Text Files/StreamReader and StreamWriter.ipynb

--- a/15. Text Files/StreamReader and StreamWriter.ipynb
+++ b/15. Text Files/StreamReader and StreamWriter.ipynb
@@ -1432,7 +1432,7 @@
     }
    },
    "source": [
-    "We may implement our desired objective, while simultaneously ensuring to close the file automatically as follows:"
+    "We may implement our desired objective, while simultaneously ensuring to close the file automatically, as follows:"
    ]
   },
   {
