modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -43,8 +43,7 @@
     }
    },
    "source": [
-    "Somewhat similarly to <a href=\"../07. Arrays/The Anatomy of an Array.ipynb\">Arrays</a>,   \n",
-    "We could imagine the **list** as an **ordered sequence (line) of elements**."
+    "Somewhat similarly to <a href=\"../07. Arrays/The Anatomy of an Array.ipynb\">Arrays</a>, we could imagine the **list** as an **ordered sequence (line) of elements**."
    ]
   },
   {
