modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -43,65 +43,6 @@
     }
    },
    "source": [
-    "Somewhat similarly to <a href=\"../07. Arrays/The Anatomy of an Array.ipynb\">Arrays</a>, we could imagine the **list** as an **ordered sequence (line) of elements**."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "A **list** features a **length property (count of elements)**, and though it's elements are arranged **consecutively**, their addresses in memory are, unlike Arrays, **non-contiguous** (they don't live right next to each other)."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
     "### Abstract Data Structure \"List\""
    ]
   },
@@ -219,6 +160,81 @@
     "- `void RemoveAt(int)` – removes the element on a given position \n",
     "- `int IndexOf(object)` – returns the position of the element \n",
     "- `this[int]` – indexer, allows access to the elements on a set position"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Static List (Array-Based Implementation)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Somewhat similarly to <a href=\"../07. Arrays/The Anatomy of an Array.ipynb\">Arrays</a>, we could imagine the **list** as an **ordered sequence (line) of elements**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "A List features a length property (count of elements), and though it's elements are arranged consecutively, their addresses in memory are, unlike Arrays, non-contiguous (they don't live right next to each other)."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Notwithsatnding, **Arrays perform many of the functions of the ADT list**, but there is an even more significant difference to consider – that Lists allow adding new elements, while **Arrays have fixed size**."
    ]
   }
  ],
