modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -43,7 +43,7 @@
     }
    },
    "source": [
-    "### Abstract Data Structure \"List\""
+    "### The \"List\" Abstract Data Structure "
    ]
   },
   {
@@ -178,6 +178,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -189,7 +203,7 @@
     }
    },
    "source": [
-    "#### Static List (Array-Based Implementation)"
+    "### Static List (Array-Based Implementation)"
    ]
   },
   {
