modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -137,7 +137,7 @@
    },
    "source": [
     "Each **ADT** defines some interface. Let’s consider the interface `System.Collections.IList`.     \n",
-    "The **basic methods** which it defines, are:"
+    "The **basic methods** which it defines are:"
    ]
   },
   {
